# chronicle-dob-decoder

./: Cargo.toml  build.rs  deployment.toml
assets/character/: adjective.json  card.json  defense.json  gold.json  hp.json  name.json  power.json  profession.json
assets/chronicle/: environment.json  scene.json
assets/context/: effect.json  era.json  rank.json
assets/date/: effect.json  era.json  holiday.json  season.json  time.json  weather.json  year.json
assets/environment/: adjective.json  effect.json  mode.json  time.json
assets/event/: climax.json  ending.json  player.json  transition.json
assets/language/cn/: paragraph_pool.json  template_pool.json  trait_pool.json
assets/location/: adjective.json  area.json  belonging.json  color.json  commodity.json  coordinate.json  name.json
assets/player/: adjective.json  card.json  gold.json  name.json  power.json  profession.json
assets/scene/: attribute.json  commodity.json  difficulty.json  name.json  operation.json
assets/schema/character/: adjective.json  attack.json  card.json  gold.json  hp.json  name.json  power.json  profession.json
assets/schema/date/: background.json  effect.json  era.json  holiday.json  season.json  (+3 more)
assets/story/: character.json  date.json  event.json
examples/: entry.rs
migration/testnet/: 2024-05-17-074018.json
production/: language.json
schema/: Cargo.toml
schema/src/: chronicle.mol  chronicle.rs  lib.rs
src/: decoder.rs  error.rs  generated.rs  handler.rs  lib.rs  main.rs  object.rs
src/core/: decoder.rs  mod.rs  render.rs
src/schema/: chronicle.rs  mod.rs
(+8 files in other folders)
