[package]
name = "chronicle-schema"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
molecule = { version = "0.8.0", default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
